--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
 body {
-        font-family: "Roboto", sans-serif;
-        background-color: #1C1C1C;
-        color: #fff;
-        margin: 0;
+    font-family: "Roboto", sans-serif;
+    background-color: #1C1C1C;
+    color: #fff;
+    margin: 0;
 }
 
 a {
-    color: white;
+    color: #ffffff;
     text-decoration: none;
 }
 
@@ -20,17 +20,21 @@ p + p {
     margin-top: 15px;
 }
 
+.container {
+    box-sizing: border-box;
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 15px;
+}
+
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-p {
-    margin: 0;
-}
-
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
     margin: 0;
 }
@@ -39,30 +43,18 @@ img {
     max-width: 100%;
 }
 
-.container {
-    box-sizing:border-box;
-    max-width: 1170px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 15px;
-}
-
 .btn {
     display: flex;
     align-items: center;
     justify-content: center;
-
     font-weight: 500;
     font-size: 16px;
     color: white;
     text-transform: uppercase;
-
     width: 165px;
     height: 50px;
-
-    background: #F6762C;
+    background: #f6762C;
     border-radius: 5px;
-
     transition: opacity 0.3s;
 }
 
@@ -78,8 +70,6 @@ img {
 
 .header {
     padding: 25px 0;
-    position: relative;
-    z-index: 10;
 }
 
 .header .container {
@@ -88,24 +78,26 @@ img {
     align-items: center;
 }
 
+.header__nav a {
+    font-size: 14px;
+    opacity: 0.7;
+    transition: opacity 0.3s;
+}
+
+.header__nav a:hover {
+    opacity: 0.9;
+}
+
+.header__nav a.active {
+    opacity: 1;
+}
+
 .header__list {
     display: flex;
     gap: 30px;
 }
 
-.header__nav. a {
-   font-size: 14px;
-    opacity: 0.5;
-    transition: opacity 0.3s;
-}
-
-.header__nav. a:hover {
-    opacity: 0.9;
-}
-
-.header__nav. a.active {
-   opacity: 1;
-}
+/*Вітальна секція*/
 
 .welcome {
     box-sizing: border-box;
@@ -124,7 +116,6 @@ img {
 
 .welcome__subtitle {
     margin-bottom: 7px;
-
     font-size: 14px;
     letter-spacing: 0.1em;
 }
@@ -139,6 +130,8 @@ img {
     opacity: 0.7;
 }
 
+/*Список їжі*/
+
 .food-list {
     padding: 100px 0;
 }
@@ -152,16 +145,14 @@ img {
 
 .food-list__card {
     width: 260px;
-
     overflow: hidden;
     text-align: center;
-
-    background: #312f30;
+    background: #312F30;
     border-radius: 10px;
 }
 
 .food-list__img {
-    width:100%;
+    width: 100%;
     height: 175px;
     object-fit: cover;
 }
@@ -171,25 +162,26 @@ img {
 }
 
 .food-list__title {
-    margin-bottom: 15px;
+    margin-bottom: 13px;
     font-size: 20px;
 }
 
-.food-list__desk {
+.food-list__desc {
     font-size: 16px;
     opacity: 0.7;
 }
 
+/*Order*/
+
 .order {
-    background: #312f30;
+    background: #312F30;
     padding: 60px 0;
 }
 
 .order .container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-
+    justify-content: space-between;
     padding-right: 90px;
 }
 
@@ -202,8 +194,8 @@ img {
 }
 
 .order__title {
-    font-size: 44px;
     margin-bottom: 25px;
+    font-size: 44px;
 }
 
 .order__desc {
@@ -212,18 +204,17 @@ img {
 }
 
 .order__price {
-    color: #F6762C;
-    font-size: 20px;
     font-weight: 500;
+    font-size: 20px;
     letter-spacing: 0.1em;
+    color: #f6762C;
 }
 
 .order__price--old {
-    color: #F6762C;
-    font-weight: 500;
-    letter-spacing: 0.1em;
+    font-size: 16px;
     text-decoration-line: line-through;
     opacity: 0.5;
+    color: #f6762C;
 }
 
 .order__price + .order__price {
@@ -247,13 +238,13 @@ img {
 
 .product__card {
     box-sizing: border-box;
-
     width: 555px;
     min-height: 300px;
-
     padding: 60px 30px 60px 290px;
-
-    background-color: darkslategray;
+    background-color: #312F30;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .product__card:nth-child(even) {
@@ -267,15 +258,14 @@ img {
 }
 
 .product__desc {
-    opacity: 0.7;
     margin-bottom: 10px;
-
+    opacity: 0.7;
 }
 
 .product__price {
     font-weight: 500;
     letter-spacing: 0.1em;
-    color: #F6762C;
+    color: #f6762C;
 }
 
 .product__price + .product__price {
@@ -285,13 +275,12 @@ img {
 .product__price--old {
     text-decoration-line: line-through;
     opacity: 0.5;
-    color: #F6762C;
+    color: #f6762C;
 }
 
 .product .btn {
     margin-top: 10px;
 }
-
 
 .card-queen {
     background-image: url("./images/product-1.jpg");
@@ -309,6 +298,8 @@ img {
     background-image: url("./images/product-4.jpg");
 }
 
+/*Feedback*/
+
 .feedback {
     padding-bottom: 200px;
 }
@@ -317,18 +308,13 @@ img {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     max-width: 880px;
 }
 
 .feedback__text {
     margin: 0;
-    align-items: center;
-    width: 370px;
+    max-width: 370px;
     text-align: center;
-
-    display: flex;
-    flex-direction: column;
 }
 
 .feedback__text::before {
@@ -341,31 +327,37 @@ img {
 }
 
 .feedback__author {
-    font-size: 24px;
     font-style: normal;
     font-weight: 500;
+    font-size: 24px;
 }
 
 .feedback__subauthor {
-    font-size: 12px;
     font-weight: 500;
+    font-size: 12px;
     opacity: 0.7;
+    display: block;
 }
+
+/*Download*/
 
 .download {
     padding: 60px 0;
-    background: #312f30;
+    background: #312F30;
 }
 
 .download .container {
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .download__title {
     font-size: 40px;
     font-weight: 500;
 }
+
+/*Footer*/
 
 .footer {
     padding: 120px 0;
@@ -374,11 +366,11 @@ img {
 .footer a {
     font-size: 12px;
     color: rgba(255, 255, 255, 0.8);
-    transition: 0.3s color;
+    transition: color 0.3s;
 }
 
 .footer a:hover {
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .footer .footer__title {
@@ -400,9 +392,13 @@ img {
     align-items: flex-start;
 }
 
-.footer_logo {
+.footer__logo {
     width: 70px;
     margin-bottom: 20px;
+}
+
+.footer__link + .footer__link {
+    margin-top: 10px;
 }
 
 .footer__link {
@@ -411,20 +407,16 @@ img {
     gap: 5px;
 }
 
-.footer__link + .footer__link {
-    margin-top: 10px;
-}
-
 .footer__link::before {
-    width: 12px;
     height: 12px;
+    width: 12px;
 }
 
 .footer__link-mail::before {
     content: url("./images/mail.svg");
 }
 
-.footer__link::before {
+.footer__link-web::before {
     content: url("./images/global.svg");
 }
 
@@ -437,6 +429,282 @@ img {
     margin-top: 15px;
 }
 
-.footer__social-link + .footer__social-link {
+.footer__socials-link + .footer__socials-link {
     margin-left: 7px;
+}
+
+@media (max-width: 1100px) {
+    .welcome__desc {
+        opacity: 1;
+    }
+}
+
+@media (max-width: 950px) {
+    .order .container {
+        flex-direction: column;
+        padding-right: 15px;
+    }
+
+    .order__text {
+        text-align: center;
+    }
+
+    .order .btn {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (max-width: 850px) {
+    .food-list .container {
+        justify-content: space-evenly;
+    }
+
+    .footer .container {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: "nav nav"
+                             "contacts socials";
+        justify-items: center;
+        gap: 40px 150px;
+    }
+
+    .footer__contacts {
+        grid-area: contacts;
+        justify-self: end;
+    }
+
+    .footer__nav {
+        grid-area: nav;
+    }
+
+    .footer__socials {
+        grid-area: socials;
+        align-self: center;
+        justify-self: start;
+    }
+
+    .footer__list {
+        gap: 80px;
+    }
+
+    .feedback {
+        padding-bottom: 100px;
+    }
+
+    .footer {
+        padding: 60px 0;
+    }
+
+    .welcome .container {
+        position: relative;
+        z-index: 10;
+    }
+
+    .welcome::before {
+        content: "";
+        background-color: rgba(0, 0, 0, 0.3);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+}
+
+@media (max-width: 650px) {
+    .header .btn {
+        display: none;
+    }
+
+    .feedback__img {
+        width: 200px;
+    }
+
+    .download__title {
+        font-size: 24px;
+    }
+
+    .welcome {
+        padding: 150px 0 100px;
+        min-height: auto;
+    }
+
+    .welcome__text {
+        width: 100%;
+    }
+
+    .welcome__title {
+        font-size: 40px;
+    }
+
+    .welcome__desc {
+        margin: 20px 0;
+    }
+
+    .product {
+        padding: 60px 0 100px;
+    }
+
+    .product__card {
+        width: 100%;
+        padding-left: 50%;
+    }
+
+    .product__card:nth-child(even) {
+        padding-right: 50%;
+    }
+}
+
+@media (max-width: 500px) {
+    .header .container {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .header__list {
+        flex-direction: column;
+        text-align: center;
+        gap: 10px;
+    }
+
+    .welcome {
+        margin-top: -240px;
+        padding-top: 280px;
+        padding-bottom: 80px;
+    }
+
+    .welcome__title {
+        font-size: 30px;
+
+    }
+
+    .welcome__desc {
+        font-size: 12px;
+    }
+
+    .food-list {
+        padding: 60px 0;
+    }
+
+    .order__title {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .order__img {
+        width: 100%;
+    }
+
+    .feedback .container {
+        flex-direction: column;
+    }
+
+    .feedback, .product {
+        padding-bottom: 60px;
+    }
+
+    .download .container {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .footer .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer__contacts {
+        align-items: center;
+    }
+
+    .footer__socials-icons {
+        display: flex;
+        justify-content: center;
+    }
+
+    .footer__list {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .footer .footer__title {
+        margin-bottom: 10px;
+    }
+
+    .footer__list-item + .footer__list-item {
+        margin-top: 7px;
+    }
+
+    .footer__logo {
+        margin-bottom: 10px;
+    }
+
+    .feedback__author {
+        font-size: 18px;
+    }
+
+    .feedback__desc {
+        margin: 20px 0;
+        font-size: 14px;
+    }
+
+    .product__card {
+        padding-left: 30px;
+    }
+
+    .product__card:nth-child(even) {
+        padding-right: 30px;
+    }
+
+    .product__desc {
+        opacity: 1;
+    }
+
+    .product__card {
+        position: relative;
+
+        text-align: center;
+    }
+
+    .product .btn {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .product__card > * {
+        position: relative;
+        z-index: 10;
+    }
+
+    .product__card::before {
+        content: "";
+        background-color: rgba(0, 0, 0, 0.5);
+        width: 100%;
+        height: 100%;
+
+        position: absolute;
+        left: 0;
+        top: 0;
+
+    }
+
+    .welcome {
+
+    }
+
+    .product__card::before {
+        content: "";
+        background-color: rgba(0, 0, 0, 0.5);
+        width: 100%;
+        height: 100%;
+
+        position: absolute;
+        left: 0;
+        top: 0;
+
+    }
 }
